# obs-studio

UI/: window-basic-main-outputs.cpp  window-basic-main.cpp  window-basic-settings.cpp  window-remux.cpp
UI/forms/: OBSBasicSettings.ui
libobs/: obs-display.c  obs-encoder.c  obs-internal.h  obs-module.h  obs-scene.c  obs-source.c  obs-video-gpu-encode.c  obs-video.c  obs.c  obs.h
libobs-d3d11/: CMakeLists.txt  d3d11-subsystem.cpp  d3d11-subsystem.hpp
libobs/graphics/: device-exports.h  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h
libobs/media-io/: video-io.c
plugins/obs-ffmpeg/: obs-ffmpeg-mux.c  obs-ffmpeg-output.c  obs-ffmpeg.c
plugins/obs-ffmpeg/ffmpeg-mux/: ffmpeg-mux.c
plugins/obs-outputs/: rtmp-stream.c
plugins/obs-qsv11/: CMakeLists.txt  QSV_Encoder.cpp  QSV_Encoder.h  QSV_Encoder_Internal.cpp  QSV_Encoder_Internal.h  common_directx11.cpp  common_utils.h  common_utils_windows.cpp  obs-qsv-h265.c  obs-qsv11-plugin-main.c  obs-qsv11.c  sample_types.h
plugins/obs-qsv11/libmfx/include/msdk/include/: mfxplugin++.h  mfxstructures.h  mfxvideo.h
plugins/obs-qsv11/libmfx/include/msdk/include/vm/: so_defs.h
plugins/obs-qsv11/libmfx/src/: main.cpp  mfx_library_iterator.cpp  mfx_load_dll.cpp
plugins/obs-qsv11/text/: cl_cache_admin.bat  cnn.cpp  cnn.hpp  main_segmentation.cpp  main_sod.cpp  main_text.cpp  main_text.h  text_detection.cpp
plugins/obs-text/gdiplus/: obs-text.cpp
plugins/obs-transitions/: transition-fade.c
plugins/win-capture/graphics-hook/: CMakeLists.txt  d3d9-capture.cpp  graphics-hook-config.h.in
